--- a/backend/lambda-file-processor/requirements.txt
+++ b/backend/lambda-file-processor/requirements.txt
@@ -9,7 +9,7 @@ googledrivedownloader==0.4
 idna==3.4
 jmespath==1.0.1
 numpy==1.24.2
-opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 pip==22.3.1
 pycodestyle==2.10.0
 python-dateutil==2.8.2
