--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/status-bar": "^4.1.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/storage-angular": "^3.0.6",
     "aws-sdk": "^2.1343.0",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.3",
