--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
+    "speak-tts": "^2.0.8",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
